--- a/socios/templates/index.html
+++ b/socios/templates/index.html
@@ -2,12 +2,12 @@
 {% load i18n %}
 
 
-{% block title %}{% trans "Demo Index" %}{% endblock %}
-{% block page_name %} {% trans "Demo Index" %} {% endblock %}
-{% block page_description %}{% trans "Demostration index" %} {% endblock %}
+{% block title %}{% trans "Recorridos" %}{% endblock %}
+{% block page_name %} {% trans "Recorridos Index" %} {% endblock %}
+{% block page_description %}{% trans "Recorridos demo" %} {% endblock %}
 
 {% block content %}
 
-<h1> Bingo</h1>
+<h1>Sistemas de registro de timbreo</h1>
 
 {% endblock %}
