--- a/recorridos/templates/cruds/update.html
+++ b/recorridos/templates/cruds/update.html
@@ -2,15 +2,15 @@
 {% load i18n %}
 {% load crud_tags %}
 
-{% block title %}{% trans "Update" %} {{ model_verbose_name_plural|lower }}{% endblock %}
-{% block body_class %}{{ model_verbose_name_plural|lower }}{% endblock body_class %}
-{% block page_name %}{{ model_verbose_name_plural }}{% endblock %}
-{% block page_description %}{% trans "Update" %} {{ model_verbose_name_plural|lower }}{% endblock %}
+{% block title %}{% if blocks.title %}{{ blocks.page_description }}{% else %}{% trans "Update" %} {{ model_verbose_name_plural|lower }}{% endif %}{% endblock %}
+{% block body_class %}{{ blocks.body_class|default:model_verbose_name_plural|lower }}{% endblock body_class %}
+{% block page_name %}{{ blocks.page_name|default:model_verbose_name_plural }}{% endblock %}
+{% block page_description %}{% if blocks.page_description %}{{ blocks.page_description }}{% else %}{% trans "Update" %} {{ model_verbose_name_plural|lower }}{% endif %}{% endblock %}
 
 {% block content %}
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-    	{% if crud_perms.list %}
+        {% if crud_perms.list %}
         <a href="{{ url_list }}{{getparams}}">
             <i class="fa fa-angle-double-left"></i>
             {% trans "Back to" %} {{ model_verbose_name_plural|lower }}
@@ -21,6 +21,7 @@
             <div class="box-header with-border">
                 <h3 class="box-title">{% trans "Edit" %} {{ model_verbose_name }}</h3>
             </div>
+
             {% include "cruds/_form.html" with action='update' %}
 
           {% if inlines%}
@@ -54,6 +55,7 @@
 
                                 id="#{{ name }}_{{ object.pk }}_add"
                                 data-replace-inner="#edit_modal_inner"
+
 
                                 data-replace-inner="#{{inline.name}}_editList"
                                 data-ajax="" data-success="function(){}" >
