--- a/recorridos/templates/cruds_template/_form.html
+++ b/recorridos/templates/cruds_template/_form.html
@@ -8,6 +8,9 @@
 <form action="{% if action == 'create'%}{{url_create}}{%else%}{{url_update}}{% endif %}{{getparams}}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="box-body row">
+
+        {{  form.instance.socio }}  
+
         <div class="col-md-12">
             {% if form.helper %}
                 {% crispy form %}
