--- a/recorridos/templates/cruds_template/update.html
+++ b/recorridos/templates/cruds_template/update.html
@@ -19,7 +19,7 @@
         <br /><br />
         <div class="box">
             <div class="box-header with-border">
-                <h3 class="box-title">{% trans "Edit" %} {{ model_verbose_name }}</h3>
+                <h3 class="box-title">{% trans "" %} {{ model_verbose_name }}</h3>
             </div>
 
             {% include "cruds/_form.html" with action='update' %}
