--- a/recorridos/templates/index.html
+++ b/recorridos/templates/index.html
@@ -2,12 +2,10 @@
 {% load i18n %}
 
 
-{% block title %}{% trans "Recorridos" %}{% endblock %}
-{% block page_name %} {% trans "Recorridos Index" %} {% endblock %}
-{% block page_description %}{% trans "Recorridos demo" %} {% endblock %}
+{% block title %}{% trans "Primero River" %}{% endblock %}
+{% block page_name %} {% trans "" %} {% endblock %}
+{% block page_description %}{% trans "" %} {% endblock %}
 
 {% block content %}
-
-<h1>Sistemas de registro de timbreo</h1>
 
 {% endblock %}
