--- a/recorridos/templates/cruds/base.html
+++ b/recorridos/templates/cruds/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    {% load staticfiles i18n %}
+    {% load static i18n %}
 
     {% block title_outer %}
         <title>{% block title %}{% endblock %}</title>
