--- a/recorridos/templates/reportes/detalle_pedidos_pdf.html
+++ b/recorridos/templates/reportes/detalle_pedidos_pdf.html
@@ -1,5 +1,109 @@
-{% extends 'adminlte/base.html' %}
+<!doctype html>
 
-{% block content %}
+<html>
 
-{% endblock %}
+<head>
+    <meta charset="utf-8">
+    <title>Detalles de pedidos</title>
+    <style type="text/css">
+        @page {
+            size: A4;
+            margin: 0.5cm;
+        }
+
+        .table {
+            width: 100%;
+            max-width: 100%;
+            margin-bottom: 5px;
+            background-color: #fff;
+        }
+
+        .table th,
+        .table td {
+            padding: 5px;
+            vertical-align: top;
+            border-top: 1px solid #000;
+            text-align: center;
+            font-size: 10px;
+        }
+
+        .table thead th {
+            vertical-align: bottom;
+            border-bottom: 2px solid #000;
+        }
+
+        .table tbody + tbody {
+            border-top: 2px solid #000;
+        }
+
+        .table .table {
+            background-color: #fff;
+            font-size: 10px;
+        }
+
+        .list-group {
+            display: block;
+            width: 100%;
+            list-style: none;
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }
+
+        .list-group p {
+            width: 100%;
+            height: 20px;
+            line-height: 20px;
+            list-style: none;
+            font-size: 1em;
+        }
+
+    </style>
+</head>
+<body>
+<div class="container">
+    <div class="card">
+        <div class="card-header">
+            <h3>Reporte detallado de pedidos </h3>
+        </div>
+    {% for evento in eventos %}
+        <div class="list-group">
+            <p>Evento: {{ evento.nombre }} </p>
+        </div>
+
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Usuario/Fecha</th>
+                <th>Destinatario</th>
+                <th>Documento</th>
+                <th>Tarifa</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for pedido in evento.pedidos.all %}
+                {% if pedido.cantidad_tickets > 0 %}
+                    <tr style="background-color: #eeecec;">
+                        <td style="text-align: left">{{ pedido.user }} - {{ pedido.evento }}</td>
+                        <td style="text-align: left; border: 0px;"></td>
+                        <td style="text-align: left; border: 0px;"></td>
+                        <td style="text-align: left; border: 0px;"></td>
+                    </tr>
+
+                    {% for entrada in pedido.entradas.all %}
+                        <tr >
+                        <td style="text-align: right">{{ entrada.created_date | date:"d/m/Y" }}</td>
+                        <td style="text-align: left">{{ entrada.nombre_destinatario }}</td>
+                        <td style="text-align: left">{{ entrada.dni_destinatario }}</td>
+                        <td style="text-align: left">{{ entrada.tarifa }} </td>
+                        </tr>
+                    {% endfor %}
+                {% endif %}
+            {% endfor %}
+            </tbody>
+        </table>
+    {% endfor %}
+    </div>
+</div>
+
+</body>
+</html>
